<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imx219_83_stereo_camera</name>
  <version>0.1.0</version>
  <description>TODO: Package description</description>
  <maintainer email="eetu.silvennoinen@gmail.com">ros</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>gscam</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
